Let's actually start using Git since i am now working on this project using 2 computers